{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 138,
  "lineage": "da21e254-ec6a-55fc-71b3-0f69b27abf8d",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "bastion_nic",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth110-bstn-nic",
            "internal_domain_name_suffix": "55nruyrnii1e3cfybxa52mz5jh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth110-bstn-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/publicIPAddresses/geth110-ip",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-pblc-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth110-bstn-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "geth11-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_public_ip.public_ip",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.public_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "worker_nic",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth110-wrkr-nic",
            "internal_domain_name_suffix": "55nruyrnii1e3cfybxa52mz5jh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth110-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.30",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth110-wrkr-nic",
            "private_ip_address": "10.0.2.30",
            "private_ip_addresses": [
              "10.0.2.30"
            ],
            "resource_group_name": "geth11-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth111-wrkr-nic",
            "internal_domain_name_suffix": "55nruyrnii1e3cfybxa52mz5jh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth111-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.19",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth111-wrkr-nic",
            "private_ip_address": "10.0.2.19",
            "private_ip_addresses": [
              "10.0.2.19"
            ],
            "resource_group_name": "geth11-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth112-wrkr-nic",
            "internal_domain_name_suffix": "55nruyrnii1e3cfybxa52mz5jh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth112-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.10",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth112-wrkr-nic",
            "private_ip_address": "10.0.2.10",
            "private_ip_addresses": [
              "10.0.2.10"
            ],
            "resource_group_name": "geth11-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth113-wrkr-nic",
            "internal_domain_name_suffix": "55nruyrnii1e3cfybxa52mz5jh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth113-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.34",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth113-wrkr-nic",
            "private_ip_address": "10.0.2.34",
            "private_ip_addresses": [
              "10.0.2.34"
            ],
            "resource_group_name": "geth11-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth114-wrkr-nic",
            "internal_domain_name_suffix": "55nruyrnii1e3cfybxa52mz5jh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth114-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.17",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth114-wrkr-nic",
            "private_ip_address": "10.0.2.17",
            "private_ip_addresses": [
              "10.0.2.17"
            ],
            "resource_group_name": "geth11-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth115-wrkr-nic",
            "internal_domain_name_suffix": "55nruyrnii1e3cfybxa52mz5jh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth115-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.37",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth115-wrkr-nic",
            "private_ip_address": "10.0.2.37",
            "private_ip_addresses": [
              "10.0.2.37"
            ],
            "resource_group_name": "geth11-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth116-wrkr-nic",
            "internal_domain_name_suffix": "55nruyrnii1e3cfybxa52mz5jh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth116-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.29",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth116-wrkr-nic",
            "private_ip_address": "10.0.2.29",
            "private_ip_addresses": [
              "10.0.2.29"
            ],
            "resource_group_name": "geth11-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth117-wrkr-nic",
            "internal_domain_name_suffix": "55nruyrnii1e3cfybxa52mz5jh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth117-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth117-wrkr-nic",
            "private_ip_address": "10.0.2.6",
            "private_ip_addresses": [
              "10.0.2.6"
            ],
            "resource_group_name": "geth11-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth118-wrkr-nic",
            "internal_domain_name_suffix": "55nruyrnii1e3cfybxa52mz5jh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth118-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.13",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth118-wrkr-nic",
            "private_ip_address": "10.0.2.13",
            "private_ip_addresses": [
              "10.0.2.13"
            ],
            "resource_group_name": "geth11-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth119-wrkr-nic",
            "internal_domain_name_suffix": "55nruyrnii1e3cfybxa52mz5jh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth119-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth119-wrkr-nic",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "geth11-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 10,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1110-wrkr-nic",
            "internal_domain_name_suffix": "55nruyrnii1e3cfybxa52mz5jh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth1110-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.7",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth1110-wrkr-nic",
            "private_ip_address": "10.0.2.7",
            "private_ip_addresses": [
              "10.0.2.7"
            ],
            "resource_group_name": "geth11-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 11,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1111-wrkr-nic",
            "internal_domain_name_suffix": "55nruyrnii1e3cfybxa52mz5jh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth1111-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.41",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth1111-wrkr-nic",
            "private_ip_address": "10.0.2.41",
            "private_ip_addresses": [
              "10.0.2.41"
            ],
            "resource_group_name": "geth11-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 12,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1112-wrkr-nic",
            "internal_domain_name_suffix": "55nruyrnii1e3cfybxa52mz5jh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth1112-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.8",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth1112-wrkr-nic",
            "private_ip_address": "10.0.2.8",
            "private_ip_addresses": [
              "10.0.2.8"
            ],
            "resource_group_name": "geth11-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 13,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1113-wrkr-nic",
            "internal_domain_name_suffix": "55nruyrnii1e3cfybxa52mz5jh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth1113-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.20",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth1113-wrkr-nic",
            "private_ip_address": "10.0.2.20",
            "private_ip_addresses": [
              "10.0.2.20"
            ],
            "resource_group_name": "geth11-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 14,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1114-wrkr-nic",
            "internal_domain_name_suffix": "55nruyrnii1e3cfybxa52mz5jh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth1114-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.25",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth1114-wrkr-nic",
            "private_ip_address": "10.0.2.25",
            "private_ip_addresses": [
              "10.0.2.25"
            ],
            "resource_group_name": "geth11-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 15,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1115-wrkr-nic",
            "internal_domain_name_suffix": "55nruyrnii1e3cfybxa52mz5jh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth1115-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.35",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth1115-wrkr-nic",
            "private_ip_address": "10.0.2.35",
            "private_ip_addresses": [
              "10.0.2.35"
            ],
            "resource_group_name": "geth11-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 16,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1116-wrkr-nic",
            "internal_domain_name_suffix": "55nruyrnii1e3cfybxa52mz5jh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth1116-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.14",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth1116-wrkr-nic",
            "private_ip_address": "10.0.2.14",
            "private_ip_addresses": [
              "10.0.2.14"
            ],
            "resource_group_name": "geth11-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 17,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1117-wrkr-nic",
            "internal_domain_name_suffix": "55nruyrnii1e3cfybxa52mz5jh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth1117-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.31",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth1117-wrkr-nic",
            "private_ip_address": "10.0.2.31",
            "private_ip_addresses": [
              "10.0.2.31"
            ],
            "resource_group_name": "geth11-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 18,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1118-wrkr-nic",
            "internal_domain_name_suffix": "55nruyrnii1e3cfybxa52mz5jh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth1118-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.16",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth1118-wrkr-nic",
            "private_ip_address": "10.0.2.16",
            "private_ip_addresses": [
              "10.0.2.16"
            ],
            "resource_group_name": "geth11-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 19,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1119-wrkr-nic",
            "internal_domain_name_suffix": "55nruyrnii1e3cfybxa52mz5jh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth1119-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.28",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth1119-wrkr-nic",
            "private_ip_address": "10.0.2.28",
            "private_ip_addresses": [
              "10.0.2.28"
            ],
            "resource_group_name": "geth11-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 20,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1120-wrkr-nic",
            "internal_domain_name_suffix": "55nruyrnii1e3cfybxa52mz5jh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth1120-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.27",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth1120-wrkr-nic",
            "private_ip_address": "10.0.2.27",
            "private_ip_addresses": [
              "10.0.2.27"
            ],
            "resource_group_name": "geth11-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 21,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1121-wrkr-nic",
            "internal_domain_name_suffix": "55nruyrnii1e3cfybxa52mz5jh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth1121-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.33",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth1121-wrkr-nic",
            "private_ip_address": "10.0.2.33",
            "private_ip_addresses": [
              "10.0.2.33"
            ],
            "resource_group_name": "geth11-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 22,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1122-wrkr-nic",
            "internal_domain_name_suffix": "55nruyrnii1e3cfybxa52mz5jh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth1122-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.32",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth1122-wrkr-nic",
            "private_ip_address": "10.0.2.32",
            "private_ip_addresses": [
              "10.0.2.32"
            ],
            "resource_group_name": "geth11-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 23,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1123-wrkr-nic",
            "internal_domain_name_suffix": "55nruyrnii1e3cfybxa52mz5jh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth1123-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.43",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth1123-wrkr-nic",
            "private_ip_address": "10.0.2.43",
            "private_ip_addresses": [
              "10.0.2.43"
            ],
            "resource_group_name": "geth11-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 24,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1124-wrkr-nic",
            "internal_domain_name_suffix": "55nruyrnii1e3cfybxa52mz5jh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth1124-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.11",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth1124-wrkr-nic",
            "private_ip_address": "10.0.2.11",
            "private_ip_addresses": [
              "10.0.2.11"
            ],
            "resource_group_name": "geth11-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 25,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1125-wrkr-nic",
            "internal_domain_name_suffix": "55nruyrnii1e3cfybxa52mz5jh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth1125-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.15",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth1125-wrkr-nic",
            "private_ip_address": "10.0.2.15",
            "private_ip_addresses": [
              "10.0.2.15"
            ],
            "resource_group_name": "geth11-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 26,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1126-wrkr-nic",
            "internal_domain_name_suffix": "55nruyrnii1e3cfybxa52mz5jh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth1126-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.9",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth1126-wrkr-nic",
            "private_ip_address": "10.0.2.9",
            "private_ip_addresses": [
              "10.0.2.9"
            ],
            "resource_group_name": "geth11-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 27,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1127-wrkr-nic",
            "internal_domain_name_suffix": "55nruyrnii1e3cfybxa52mz5jh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth1127-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.18",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth1127-wrkr-nic",
            "private_ip_address": "10.0.2.18",
            "private_ip_addresses": [
              "10.0.2.18"
            ],
            "resource_group_name": "geth11-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 28,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1128-wrkr-nic",
            "internal_domain_name_suffix": "55nruyrnii1e3cfybxa52mz5jh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth1128-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.24",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth1128-wrkr-nic",
            "private_ip_address": "10.0.2.24",
            "private_ip_addresses": [
              "10.0.2.24"
            ],
            "resource_group_name": "geth11-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 29,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1129-wrkr-nic",
            "internal_domain_name_suffix": "55nruyrnii1e3cfybxa52mz5jh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth1129-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.42",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth1129-wrkr-nic",
            "private_ip_address": "10.0.2.42",
            "private_ip_addresses": [
              "10.0.2.42"
            ],
            "resource_group_name": "geth11-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 30,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1130-wrkr-nic",
            "internal_domain_name_suffix": "55nruyrnii1e3cfybxa52mz5jh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth1130-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.23",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth1130-wrkr-nic",
            "private_ip_address": "10.0.2.23",
            "private_ip_addresses": [
              "10.0.2.23"
            ],
            "resource_group_name": "geth11-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 31,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1131-wrkr-nic",
            "internal_domain_name_suffix": "55nruyrnii1e3cfybxa52mz5jh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth1131-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.21",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth1131-wrkr-nic",
            "private_ip_address": "10.0.2.21",
            "private_ip_addresses": [
              "10.0.2.21"
            ],
            "resource_group_name": "geth11-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 32,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1132-wrkr-nic",
            "internal_domain_name_suffix": "55nruyrnii1e3cfybxa52mz5jh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth1132-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.40",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth1132-wrkr-nic",
            "private_ip_address": "10.0.2.40",
            "private_ip_addresses": [
              "10.0.2.40"
            ],
            "resource_group_name": "geth11-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 33,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1133-wrkr-nic",
            "internal_domain_name_suffix": "55nruyrnii1e3cfybxa52mz5jh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth1133-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth1133-wrkr-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "geth11-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 34,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1134-wrkr-nic",
            "internal_domain_name_suffix": "55nruyrnii1e3cfybxa52mz5jh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth1134-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.22",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth1134-wrkr-nic",
            "private_ip_address": "10.0.2.22",
            "private_ip_addresses": [
              "10.0.2.22"
            ],
            "resource_group_name": "geth11-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 35,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1135-wrkr-nic",
            "internal_domain_name_suffix": "55nruyrnii1e3cfybxa52mz5jh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth1135-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.38",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth1135-wrkr-nic",
            "private_ip_address": "10.0.2.38",
            "private_ip_addresses": [
              "10.0.2.38"
            ],
            "resource_group_name": "geth11-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 36,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1136-wrkr-nic",
            "internal_domain_name_suffix": "55nruyrnii1e3cfybxa52mz5jh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth1136-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.12",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth1136-wrkr-nic",
            "private_ip_address": "10.0.2.12",
            "private_ip_addresses": [
              "10.0.2.12"
            ],
            "resource_group_name": "geth11-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 37,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1137-wrkr-nic",
            "internal_domain_name_suffix": "55nruyrnii1e3cfybxa52mz5jh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth1137-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.44",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth1137-wrkr-nic",
            "private_ip_address": "10.0.2.44",
            "private_ip_addresses": [
              "10.0.2.44"
            ],
            "resource_group_name": "geth11-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 38,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1138-wrkr-nic",
            "internal_domain_name_suffix": "55nruyrnii1e3cfybxa52mz5jh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth1138-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.39",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth1138-wrkr-nic",
            "private_ip_address": "10.0.2.39",
            "private_ip_addresses": [
              "10.0.2.39"
            ],
            "resource_group_name": "geth11-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 39,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1139-wrkr-nic",
            "internal_domain_name_suffix": "55nruyrnii1e3cfybxa52mz5jh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth1139-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.26",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth1139-wrkr-nic",
            "private_ip_address": "10.0.2.26",
            "private_ip_addresses": [
              "10.0.2.26"
            ],
            "resource_group_name": "geth11-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 40,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1140-wrkr-nic",
            "internal_domain_name_suffix": "55nruyrnii1e3cfybxa52mz5jh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "geth1140-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.36",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-prvt-sn001"
              }
            ],
            "location": "westeurope",
            "name": "geth1140-wrkr-nic",
            "private_ip_address": "10.0.2.36",
            "private_ip_addresses": [
              "10.0.2.36"
            ],
            "resource_group_name": "geth11-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "bastion_nic_assoc",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth110-bstn-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-pblc-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth110-bstn-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-pblc-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.bastion_nic",
            "azurerm_network_security_group.public_nsg",
            "azurerm_public_ip.public_ip",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.public_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "worker_nic_assoc",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth110-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth110-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth111-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth111-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth112-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth112-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth113-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth113-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth114-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth114-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth115-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth115-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth116-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth116-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth117-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth117-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth118-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth118-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth119-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth119-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 10,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1110-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1110-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 11,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1111-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1111-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 12,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1112-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1112-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 13,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1113-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1113-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 14,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1114-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1114-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 15,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1115-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1115-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 16,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1116-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1116-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 17,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1117-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1117-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 18,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1118-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1118-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 19,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1119-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1119-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 20,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1120-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1120-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 21,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1121-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1121-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 22,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1122-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1122-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 23,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1123-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1123-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 24,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1124-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1124-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 25,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1125-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1125-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 26,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1126-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1126-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 27,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1127-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1127-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 28,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1128-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1128-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 29,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1129-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1129-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 30,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1130-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1130-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 31,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1131-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1131-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 32,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1132-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1132-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 33,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1133-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1133-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 34,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1134-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1134-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 35,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1135-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1135-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 36,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1136-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1136-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 37,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1137-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1137-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 38,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1138-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1138-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 39,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1139-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1139-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 40,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1140-wrkr-nic|/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg",
            "network_interface_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkInterfaces/geth1140-wrkr-nic",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.worker_nic",
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "private_nsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg",
            "location": "westeurope",
            "name": "geth11-prvt-nsg",
            "resource_group_name": "geth11-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh-public-subnet",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            },
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "public_nsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-pblc-nsg",
            "location": "westeurope",
            "name": "geth11-pblc-nsg",
            "resource_group_name": "geth11-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh-all",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            },
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/publicIPAddresses/geth110-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "geth110-ip",
            "resource_group_name": "geth11-rg",
            "sku": "Basic",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private_subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-prvt-sn001",
            "name": "geth11-prvt-sn001",
            "resource_group_name": "geth11-rg",
            "service_endpoints": [
              "Microsoft.Sql",
              "Microsoft.ServiceBus"
            ],
            "virtual_network_name": "geth11-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public_subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-pblc-sn001",
            "name": "geth11-pblc-sn001",
            "resource_group_name": "geth11-rg",
            "service_endpoints": [
              "Microsoft.ServiceBus",
              "Microsoft.ContainerRegistry"
            ],
            "virtual_network_name": "geth11-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "private_subnet_assoc",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-prvt-sn001",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-prvt-nsg",
            "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-prvt-sn001"
          },
          "dependencies": [
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "public_subnet_assoc",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-pblc-sn001",
            "network_security_group_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/networkSecurityGroups/geth11-pblc-nsg",
            "subnet_id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet/subnets/geth11-pblc-sn001"
          },
          "dependencies": [
            "azurerm_network_security_group.public_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.public_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "621adbff-422d-4e36-88b8-0dc1fe333f4f",
            "id": "/subscriptions/fa12187f-db35-4094-bbf5-2921bf099f65/resourceGroups/geth11-rg/providers/Microsoft.Network/virtualNetworks/geth11-vnet",
            "location": "westeurope",
            "name": "geth11-vnet",
            "resource_group_name": "geth11-rg",
            "tags": {
              "application": "Block chain Performnace study",
              "applicationversion": "1.0.0",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "Renaultgeth11",
              "tier": "Blockchain VMs"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    }
  ]
}